external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/type_param_autocomplete.move
module 0x42::m;

public struct Action<T> { inner: T }

public fun make_action_ref<T>(action: &mut Action<T>): &mut T {
    &mut action.inner.bar
}
